scrooge: fix SBT's JVM args on JDK 11
Problem/Solution

The build.sbt args for JDK 11 contain
the `-XX:+UseParNewGC` option. This
option will fail to launch the JVM when
running on JDK 11. This fails in Travis CI
and running locally, removing this argument
from the JDK 11 options resolves the issue
on JDK 11 and all tests pass.

Differential Revision: https://phabricator.twitter.biz/D390879